--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '~bootstrap/dist/css/bootstrap.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,21 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.sidebar {
+  width: 15%;
+}
+.app-wrap {
+  width: 85%;
+}
+.profile-img-wrap {
+  width: 100%;
+  height: calc(15vw - 2rem);
+}
+.profile-img-wrap img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
 }
